[REFACTOR] Add conditionals for add coupon